# BroVPN

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker-init-db/: 01-create-database.sql  01-create_database.sql  02-create-users.sql
services/auth/: alembic.ini  api.py  buisnes.py  depends.py  main.py  schema.py  serializer.py
services/auth/alembic/: env.py
services/auth/alembic/versions/: 2d18e8d83448_test.py  d5240037248a_add_user_session.py
services/auth/db/: __init__.py  base.py  context.py  models.py  repository.py
services/auth/utils/: jwt.py  sms.py
services/nginx/: nginx.conf
services/telegram_bot/: bot.py  main.py
services/vpn/: main.py  model.py
shared/: config.py  depends.py
shared/database/: base.py
shared/service/: base.py
test/: _test.py  test_db _health.py  test_health.py  test_int.py
