[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.23.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "black>=25.12.0",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "marshmallow>=4.1.2",
    "marshmallow-sqlalchemy>=1.4.2",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
